// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table component should render a dynamic table correctly 1`] = `
<table
  className={null}
  role="grid"
>
  <thead>
    <tr
      role="row"
    >
      <th
        aria-sort="none"
        className={null}
        onClick={null}
        role="columnheader"
        scope="col"
      >
        
      </th>
      <th
        aria-sort="none"
        className={null}
        onClick={null}
        role="columnheader"
        scope="col"
      >
        Header
      </th>
      <th
        aria-sort="none"
        className={null}
        onClick={null}
        role="columnheader"
        scope="col"
      >
        Header
      </th>
      <th
        aria-sort="none"
        className="u-align--right"
        onClick={null}
        role="columnheader"
        scope="col"
      >
        Header
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      role="row"
    >
      <th
        className={null}
        role="rowheader"
        scope="row"
      >
        Header row
      </th>
      <td
        className={null}
        role="gridcell"
      >
        Table cell
      </td>
      <td
        className={null}
        role="gridcell"
      >
        Table cell
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        111
      </td>
    </tr>
    <tr
      role="row"
    >
      <th
        className={null}
        role="rowheader"
        scope="row"
      >
        Header row
      </th>
      <td
        className={null}
        role="gridcell"
      >
        Table cell
      </td>
      <td
        className={null}
        role="gridcell"
      >
        Table cell
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        222
      </td>
    </tr>
    <tr
      role="row"
    >
      <th
        className={null}
        role="rowheader"
        scope="row"
      >
        Header row
      </th>
      <td
        className={null}
        role="gridcell"
      >
        Table cell
      </td>
      <td
        className={null}
        role="gridcell"
      >
        Table cell
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        333
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table component should render a headerless table correctly 1`] = `
<table
  className={null}
  role="grid"
>
  <tbody>
    <tr
      role="row"
    >
      <th
        className={null}
        role="rowheader"
        scope="row"
      >
        Header row
      </th>
      <td
        className={null}
        role="gridcell"
      >
        Table cell
      </td>
      <td
        className={null}
        role="gridcell"
      >
        Table cell
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        111
      </td>
    </tr>
    <tr
      role="row"
    >
      <th
        className={null}
        role="rowheader"
        scope="row"
      >
        Header row
      </th>
      <td
        className={null}
        role="gridcell"
      >
        Table cell
      </td>
      <td
        className={null}
        role="gridcell"
      >
        Table cell
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        222
      </td>
    </tr>
    <tr
      role="row"
    >
      <th
        className={null}
        role="rowheader"
        scope="row"
      >
        Header row
      </th>
      <td
        className={null}
        role="gridcell"
      >
        Table cell
      </td>
      <td
        className={null}
        role="gridcell"
      >
        Table cell
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        333
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table component should render a pre-sorted table correctly 1`] = `
<table
  className={null}
  role="grid"
>
  <thead>
    <tr
      role="row"
    >
      <th
        aria-sort="none"
        className={null}
        onClick={null}
        role="columnheader"
        scope="col"
      >
        Name
      </th>
      <th
        aria-sort="none"
        className="u-align--right"
        onClick={null}
        role="columnheader"
        scope="col"
      >
        Users
      </th>
      <th
        aria-sort="descending"
        className="u-align--right"
        onClick={null}
        role="columnheader"
        scope="col"
      >
        Units
      </th>
      <th
        aria-sort="none"
        className="u-align--right"
        onClick={null}
        role="columnheader"
        scope="col"
      >
        Revenue
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      role="row"
    >
      <td
        className={null}
        role="gridcell"
      >
        Melon
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        12
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        23
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        $99
      </td>
    </tr>
    <tr
      role="row"
    >
      <td
        className={null}
        role="gridcell"
      >
        Grape
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        8
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        19
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        $70
      </td>
    </tr>
    <tr
      role="row"
    >
      <td
        className={null}
        role="gridcell"
      >
        Apple
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        9
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        17
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        $120
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table component should render a sortable table correctly 1`] = `
<table
  className="p-table--sortable"
  role="grid"
>
  <thead>
    <tr
      role="row"
    >
      <th
        aria-sort="none"
        className={null}
        onClick={[Function]}
        role="columnheader"
        scope="col"
      >
        Name
      </th>
      <th
        aria-sort="none"
        className="u-align--right"
        onClick={[Function]}
        role="columnheader"
        scope="col"
      >
        Users
      </th>
      <th
        aria-sort="none"
        className="u-align--right"
        onClick={[Function]}
        role="columnheader"
        scope="col"
      >
        Units
      </th>
      <th
        aria-sort="none"
        className="u-align--right"
        onClick={[Function]}
        role="columnheader"
        scope="col"
      >
        Revenue
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      role="row"
    >
      <td
        className={null}
        role="gridcell"
      >
        Grape
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        8
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        19
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        $70
      </td>
    </tr>
    <tr
      role="row"
    >
      <td
        className={null}
        role="gridcell"
      >
        Melon
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        12
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        23
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        $99
      </td>
    </tr>
    <tr
      role="row"
    >
      <td
        className={null}
        role="gridcell"
      >
        Apple
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        9
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        17
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        $120
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table component should render a static table correctly 1`] = `
<table
  className={null}
  role="grid"
>
  <thead>
    <tr
      role="row"
    >
      <th
        aria-sort="none"
        className={null}
        onClick={null}
        role="columnheader"
        scope="col"
      >
        
      </th>
      <th
        aria-sort="none"
        className={null}
        onClick={null}
        role="columnheader"
        scope="col"
      >
        Header
      </th>
      <th
        aria-sort="none"
        className={null}
        onClick={null}
        role="columnheader"
        scope="col"
      >
        Header
      </th>
      <th
        aria-sort="none"
        className="u-align--right"
        onClick={null}
        role="columnheader"
        scope="col"
      >
        Header
      </th>
    </tr>
  </thead>
  <tbody>
    <tr
      role="row"
    >
      <th
        className={null}
        role="rowheader"
        scope="row"
      >
        Header row
      </th>
      <td
        className={null}
        role="gridcell"
      >
        Table cell
      </td>
      <td
        className={null}
        role="gridcell"
      >
        Table cell
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        111
      </td>
    </tr>
    <tr
      role="row"
    >
      <th
        className={null}
        role="rowheader"
        scope="row"
      >
        Header row
      </th>
      <td
        className={null}
        role="gridcell"
      >
        Table cell
      </td>
      <td
        className={null}
        role="gridcell"
      >
        Table cell
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        222
      </td>
    </tr>
    <tr
      role="row"
    >
      <th
        className={null}
        role="rowheader"
        scope="row"
      >
        Header row
      </th>
      <td
        className={null}
        role="gridcell"
      >
        Table cell
      </td>
      <td
        className={null}
        role="gridcell"
      >
        Table cell
      </td>
      <td
        className="u-align--right"
        role="gridcell"
      >
        333
      </td>
    </tr>
  </tbody>
</table>
`;
